--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,3 @@
-/* resources/css/app.css */
-body {
-    background: linear-gradient(to right, royalblue, dodgerblue);
-    color: white;
-    font-family: Arial, sans-serif;
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
