--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+body {
+  background: linear-gradient(to right, royalblue, dodgerblue);
+  color: white;
+  font-family: Arial, sans-serif;
+}
